Initial navigation styles.

--- a/index.html
+++ b/index.html
@@ -8,11 +8,24 @@
   <meta name="description" content="A multimedia journalism project focusing on LGBTQ rights in Quito, Ecuador. Funded by the Beckman Award.">
   <meta name="author" content="Gabrielle Palacio & Peyton Chance">
   
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Serif|Nunito+Sans:100,300,400" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
 
 </head>
 
 <body>
+	<nav>
+		<p>A fight to just be.</p>
+		<ul>
+			<li><a href="#TODO">About the Project</a></li>
+			<li><a href="#TODO">The Beckman Award</a></li>
+		</ul>
+	</nav>
+
+	<h1>A fight to just be.</h1>
+	<p>The space between us was indeed sublime.</p>
+
   <script src="js/scripts.js"></script>
 </body>
 </html>
