--- a/index.html
+++ b/index.html
@@ -23,9 +23,16 @@
 		</ul>
 	</nav>
 
-	<h1>A fight to just be.</h1>
-	<p>The space between us was indeed sublime.</p>
+	<img class="hero" src="img/dg-edit-35.jpg">
 
+	<div class="header">
+		<div class="header__wrapper">
+			<h1>A fight to just be.</h1>
+			
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		</div>
+	</div>
+	
   <script src="js/scripts.js"></script>
 </body>
 </html>
