More completed styles.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <title>2018 Beckman Award</title>
   <meta name="description" content="A multimedia journalism project focusing on LGBTQ rights in Quito, Ecuador. Funded by the Beckman Award.">
   <meta name="author" content="Gabrielle Palacio & Peyton Chance">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
   
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Serif|Nunito+Sans:100,300,400" rel="stylesheet">
@@ -16,7 +18,7 @@
 
 <body>
 	<nav>
-		<p>A fight to just be.</p>
+		<a href="" class="nav-title">A fight to just be.</a>
 		<ul>
 			<li><a href="#TODO">About the Project</a></li>
 			<li><a href="#TODO">The Beckman Award</a></li>
@@ -25,14 +27,84 @@
 
 	<img class="hero" src="img/dg-edit-35.jpg">
 
-	<div class="header">
+	<div class="header wrapper">
 		<div class="header__wrapper">
 			<h1>A fight to just be.</h1>
-			
+		</div>
+		</div>
+	</div>
+
+	<div class="body-copy wrapper">
+		<div class="header__byline">
+			<ul>
+				<li>
+					<p>Gabrielle Palacio</p><br/>
+					<i>Photo/Video</i>
+				</li>
+				<li>
+					<p>Peyton Chance</p><br/>
+					<i>Reporting & Graphics</i>
+				</li>
+			</ul>
+		</div>
+		<div class="body-copy__paragraph">
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 		</div>
 	</div>
+
+	<blockquote class="pullquote">
+		 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+  	<footer>Efrain Soria</footer>
+		<img src="img/blockquote.svg">
+	</blockquote>
 	
+
+	<div class="body-copy wrapper">
+		<div class="body-copy__paragraph">
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		</div>
+	</div>
+
+	<blockquote class="pullquote">
+		 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+  	<footer>Efrain Soria</footer>
+		<img src="img/blockquote.svg">
+	</blockquote>
+
+	<div class="body-copy wrapper">
+		<div class="body-copy__paragraph">
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		</div>
+	</div>
+
+	<div class="sponsors wrapper">
+		<h2>This story is told with the generous support of these sponsors.</h2>
+		<div class="sponsors__images">
+			<a href="https://beckmanaward.mj.unc.edu">
+				<img src="img/Beckman1.jpg">
+			</a>
+			<a href="https://mj.unc.edu">
+				<img src="img/unc_jomc_blue_1.png">
+			</a>
+		</div>
+	</div>
+
+	<footer class="footer">
+		<ul>
+			<li><a href="#TODO">About the Project</a></li>
+			<li><a href="#TODO">The Beckman Award</a></li>
+		</ul>
+	</footer>
   <script src="js/scripts.js"></script>
 </body>
 </html>
